Bugs 749 and 750